Tweak accordion labels

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -50,9 +50,10 @@
   "alternativeTitles": "Alternative titles",
   "addAlternativeTitles": "Add alternative title",
   "classifications": "Classifications",
-  "addClassifications": "Add classification",
+  "addClassification": "Add classification",
   "selectClassification": "Select classification type",
   "instanceRelationshipsAnalyticsBoundWith": "Instance relationships (analytics and bound-with)",
+  "instanceRelationshipAnalyticsBoundWith": "Instance relationship (analytics and bound-with)",
   "number": "Number",
   "type": "Type",
   "typeFreeText": "Type, free text",
@@ -239,6 +240,7 @@
   "holdingsDetails": "Holdings details",
   "numberOfItems": "Number of items",
   "acquisitions": "Acquisitions",
+  "acquisition": "Acquisition",
   "receivingHistory": "Receiving history",
   "viewHoldings": "View holdings",
   "holdingsRecord": "Holdings record",
