Pass the correct parameter type to ControlledVocab in settings (UIIN-627)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -42,6 +42,7 @@
   "holdingsType": "Holdings type",
   "holdingsTypes": "Holdings types",
   "holdingsNoteTypes": "Holdings note types",
+  "holdingsNoteType": "Holdings note type",
   "ILLPolicy": "ILL policy",
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
@@ -143,7 +144,7 @@
   "instanceNoteTypes": "Instance note types",
   "instanceNoteType": "Instance note type",
   "natureOfContentTerms": "Nature of content",
-  "natureOfContentTerm": "Nature of content",
+  "natureOfContentTerm": "Nature of content term",
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
@@ -232,6 +233,7 @@
   "loans": "Loans",
   "materialTypes": "Material types",
   "itemNoteTypes": "Item note types",
+  "itemNoteType": "Item note type",
   "alternativeTitleTypes": "Alternative title types",
   "alternativeTitleType": "Alternative title type",
   "materialType": "Material type",
