UIIN-663 add missing format translations
Fixes UIIN-663

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -60,8 +60,10 @@
   "typeFreeText": "Type, free text",
   "name": "Name",
   "source": "Source",
-  "term": "Term",
-  "category": "Category",
+  "formatSource": "Format source",
+  "formatTerm": "Format term",
+  "formatCategory": "Format category",
+  "formatCode": "Format code",
   "freeText": "Free text",
   "nameType": "Name Type",
   "primary": "Primary",
