--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -148,6 +148,7 @@
   "natureOfContentTerms": "Nature of content",
   "natureOfContentTerm": "Nature of content term",
   "addNatureOfContentTerm": "Add nature of content",
+  "selectNatureOfContentTerm": "Select nature of content",
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
