Add stubs for preceding/succeeding title fields

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -50,6 +50,12 @@
   "alternativeTitle": "Alternative title",
   "alternativeTitles": "Alternative titles",
   "addAlternativeTitles": "Add alternative title",
+  "precedingTitle": "Preceding title",
+  "precedingTitles": "Preceding titles",
+  "addPrecedingTitle": "Add preceding title",
+  "succeedingTitle": "Succeeding title",
+  "succeedingTitles": "Succeeding titles",
+  "addSucceedingTitle": "Add succeeding title",
   "classifications": "Classifications",
   "addClassification": "Add classification",
   "selectClassification": "Select classification type",
