UIIN-731: Set default title for items without barcode

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -162,6 +162,7 @@
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
   "item.barcode": "Item: barcode",
+  "noBarcode": "No barcode",
   "itemHrid": "Item HRID",
   "itemIdentifier": "Item identifier",
   "formerId": "Former identifier",
