--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -51,9 +51,9 @@
   "alternativeTitles": "Alternative titles",
   "addAlternativeTitles": "Add alternative title",
   "relatedTitles": "Related titles",
-  "precedingTitle": "Preceding title",
+  "precedingTitles": "Preceding titles",
   "addPrecedingTitle": "Add preceding title",
-  "succeedingTitle": "Succeeding title",
+  "succeedingTitles": "Succeeding titles",
   "addSucceedingTitle": "Add succeeding title",
   "classifications": "Classifications",
   "addClassification": "Add classification",
