Fix formatting of statistical codes table (UIIN-796)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -104,6 +104,7 @@
   "statisticalCodes": "Statistical codes",
   "statisticalCode": "Statistical code",
   "statisticalCodeNames": "Statistical code names",
+  "statisticalCodeName": "Statistical code name",
   "statisticalCodeTypes": "Statistical code types",
   "selectStatisticalCode": "Select statistical code type",
   "statisticalCodeType": "Statistical code type",
