Add translations & update changelog

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -403,5 +403,7 @@
   "instanceNotes": "Instance notes",
   "filters.instances": "Instance",
   "filters.holdings": "Holdings",
-  "filters.items": "Item"
+  "filters.items": "Item",
+  "yes": "Yes",
+  "no": "No"
 }
