Filter utem records by item status

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -405,5 +405,14 @@
   "filters.items": "Item",
   "yes": "Yes",
   "no": "No",
-  "unknownNoteType": "Unknown note type"
+  "item.status": "Item status",
+  "item.status.available": "Available",
+  "item.status.awaitingPickup": "Awaiting pickup",
+  "item.status.checkedOut": "Checked out",
+  "item.status.inProcess": "In process",
+  "item.status.inTransit": "In transit",
+  "item.status.missing": "Missing",
+  "item.status.onOrder": "On order",
+  "item.status.paged": "Paged",
+  "item.status.withdrawn": "Withdrawn"
 }
