UIIN-643 handle empty note-type
`noteTypeId` is not a required field, hence the display of notes must handle
those that do not specify a type. The previous incarnation would cause
an NPE when the type was undefined.

Refs UIIN-643 / #779

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -405,5 +405,6 @@
   "filters.holdings": "Holdings",
   "filters.items": "Item",
   "yes": "Yes",
-  "no": "No"
+  "no": "No",
+  "unknownNoteType": "Unknown note type"
 }
