Add ability to search by using query language. Part of UIIN-724

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -237,6 +237,7 @@
   "addSeries": "Add series",
   "subjects": "Subjects",
   "subject": "Subject",
+  "querySearch": "Query search",
   "addSubject": "Add subject",
   "url": "URL",
   "urls": "URLs",
