Change name of location filter (UIIN-679)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -7,8 +7,8 @@
   "instances.columns.relation": "Relation",
   "instances.resourceType": "Resource Type",
   "instances.language": "Language",
-  "instances.location": "Location",
   "holdingsRecord.awaitingResources": "Awaiting resources",
+  "holdings.permanentLocation": "Holdings permanent location",
   "resultCount": "{count, number} {count, plural, one {record found} other {records found}}",
   "item.loanAndAvailability": "Loan and availability",
   "item.availability.itemStatus": "Item status",
