--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -420,11 +420,20 @@
   "inTransitReport": "In transit items report (CSV)",
   "reports.inTransitItem.barcode": "Item barcode",
   "reports.inTransitItem.title": "Title",
-  "reports.inTransitItem.location.name": "Library",
-  "reports.inTransitItem.location.libraryName": "Shelving location",
-  "reports.inTransitItem.location.code": "Shelving location code",
-  "reports.inTransitItem.status.name": "Item status",
+  "reports.inTransitItem.library": "Library",
+  "reports.inTransitItem.shelvingLocation": "Shelving location",
+  "reports.inTransitItem.shelvingLocationCode": "Shelving location code",
+  "reports.inTransitItem.itemStatus": "Item status",
   "reports.inTransitItem.contributors": "Contributors",
+  "reports.inTransitItem.checkInServicePoint": "Check in service point",
+  "reports.inTransitItem.checkInDateTime": "Check in date and time",
+  "reports.inTransitItem.destinationServicePoint": "Destination service point",
+  "reports.inTransitItem.requestType": "Request type",
+  "reports.inTransitItem.requesterPatronGroup": "Requester patron group",
+  "reports.inTransitItem.requestCreationDate": "Request creation date",
+  "reports.inTransitItem.requestExpirationDate": "Request expiration date",
+  "reports.inTransitItem.requestPickupServicePoint": "Request pickup service point",
+  "reports.inTransitItem.tags": "Tags",
   "reports.inTransitItem.emptyReport.label": "Nothing to export",
   "reports.inTransitItem.emptyReport.message": "There are no items with the status In transit.",
   "common.close": "Close"
