Add effective location filter to instance pane

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -404,6 +404,7 @@
   "filters.instances": "Instance",
   "filters.holdings": "Holdings",
   "filters.items": "Item",
+  "filters.effectiveLocation": "Effective location",
   "yes": "Yes",
   "no": "No",
   "unknownNoteType": "Unknown note type",
