UIIN-842 - added call number fields to in transit items report

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -436,6 +436,10 @@
   "reports.inTransitItem.requestExpirationDate": "Request expiration date",
   "reports.inTransitItem.requestPickupServicePoint": "Request pickup service point",
   "reports.inTransitItem.tags": "Tags",
+  "reports.inTransitItem.callNumber": "Call number",
+  "reports.inTransitItem.enumeration": "Enumeration",
+  "reports.inTransitItem.volume": "Volume",
+  "reports.inTransitItem.yearCaption": "Year",
   "reports.inTransitItem.emptyReport.label": "Nothing to export",
   "reports.inTransitItem.emptyReport.message": "There are no items with the status In transit.",
   "common.close": "Close"
