Update labels (UIIN-847, UIIN-838)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -142,13 +142,14 @@
   "callNumberSuffix": "Call number suffix",
   "holdingsNotes": "Holdings notes",
   "publicNote": "Public note",
+  "identifierAll": "Identifier (all)",
   "identifier": "Identifier",
   "identifiers": "Identifiers",
   "addIdentifier": "Add identifier",
   "isbn": "ISBN",
   "issn": "ISSN",
   "search.all": "Keyword (title, contributor, identifier)",
-  "title": "Title",
+  "title": "Title (all)",
   "indexTitle": "Index title",
   "selectResourceType": "Select resource type",
   "resourceTypeTerm": "Resource type term",
@@ -319,7 +320,7 @@
   "duplicateHoldings": "Duplicate",
   "editHoldings": "Edit",
   "instanceData": "Administrative data",
-  "instanceId": "Instance ID",
+  "instanceId": "Instance UUID",
   "instanceHrid": "Instance HRID",
   "addStatisticalCode": "Add statistical code",
   "instanceStatus": "Instance status term",
