Display effective call number string at the top of the item record

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -103,6 +103,7 @@
   "permanentLocation": "Permanent",
   "temporaryLocation": "Temporary",
   "effectiveLocation": "Effective location for item",
+  "effectiveCallNumber": "Effective call number string",
   "permanent": "Permanent",
   "temporary": "Temporary",
   "selectPermanenLocation": "Select permanent location",
