--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -443,5 +443,16 @@
   "reports.inTransitItem.yearCaption": "Year",
   "reports.inTransitItem.emptyReport.label": "Nothing to export",
   "reports.inTransitItem.emptyReport.message": "There are no items with the status In transit.",
-  "common.close": "Close"
+  "common.close": "Close",
+  "updatedDateAndTime": "Updated date and time",
+  "updatedSource": "Updated source",
+  "createdDateAndTime": "Created date and time",
+  "createdSource": "Created source",
+  "precedingTitle": "Preceding title",
+  "succeedingTitle": "Succeeding title",
+  "identifierType": "Identifier type",
+  "parentInstance": "Parent instance",
+  "missingDate": "Missing date",
+  "itemDamagedStatusDate": "Damaged date",
+  "checkInOutNoteType": "Check in / out note type"
 }
