--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -231,7 +231,7 @@
   "confirmItemDeleteModal.heading": "Confirm deletion of item",
   "confirmItemDeleteModal.confirm": "Confirm",
   "noItemDeleteModal.checkoutMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> is checked out and can not be deleted until checked in again, and item status is 'Available'",
-  "noItemDeleteModal.requestMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> has a request associated the request has been fullfilled, or the request has been cancelled.",
+  "noItemDeleteModal.requestMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> has a request associated and cannot be deleted until the request has been fulfilled, or the request has been cancelled. If you want to continue with the deletion of the item record, go to the Request app and clear the dependency.",
   "noItemDeleteModal.orderMessage": "Item HRID <strong>{hrid}</strong> with barcode <strong>{barcode}</strong> is on order and cannot be <strong>deleted</strong> until all dependencies with the Order app have been cleared. If you want to continue with the deletion of the item record, go to the Order app and clear the dependencies.",
   "publications": "Publications",
   "addPublication": "Add publication",
