UIIN-861: Add warning modal to HRID Inventory settings page

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -131,8 +131,13 @@
   "hridHandling.validation.maxLength": "Invalid value. Maximum {maxLength} characters allowed",
   "hridHandling.validation.startWithField": "Please enter a numeric value",
   "hridHandling.validation.assignPrefixField": "Please enter an alphanumeric value",
-  "hridHandling.successfullyMessage": "Setting was successfully updated.",
-  "hridHandling.errorMessage": "Server communication problem. Please try again",
+  "hridHandling.toast.updated": "Setting was successfully updated.",
+  "hridHandling.toast.notUpdated": "Setting was NOT updated.",
+  "hridHandling.toast.error": "Server communication problem. Please try again",
+  "hridHandling.modal.header": "Are you sure?",
+  "hridHandling.modal.body": "WARNING: Changing the HRID setting may create conflicts if records already exist in Inventory.",
+  "hridHandling.modal.button.close": "Close without saving",
+  "hridHandling.modal.button.confirm": "Update setting",
   "inheritFromHoldings": "Inherit from holdings",
   "uri": "URI",
   "shelvingOrder": "Shelving order",
