UIIN_800: Add hrid permissions

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -464,5 +464,6 @@
   "circulationHistory": "Circulation history",
   "mostRecentCheckIn": "Most recent check in",
   "checkInDate": "Check in date",
-  "servicePoint": "Service point"
+  "servicePoint": "Service point",
+  "adminData": "Admin data"
 }
