UIIN-902: Add missing translations

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -398,6 +398,7 @@
   "instanceStatusTypes": "Instance status types",
   "instanceStatusType": "Instance status type",
   "administrativeData": "Administrative data",
+  "adminData": "Admin data",
   "itemNotes": "Item notes",
   "itemCallNumber": "Item call number",
   "otherRelatedInstances": "Other related instances",
