--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -118,6 +118,7 @@
   "selectTemporaryLocation": "Select temporary location",
   "selectLocation": "Select location",
   "selectAlternativeTitleType": "Select alternative title type",
+  "settings.goBack": "Go back to inventory settings",
   "hridHandling": "HRID handling",
   "hridHandling.description.line1": "After initial data migration, new FOLIO HRIDs are assigned sequentially, based on the starting number in these settings",
   "hridHandling.description.line2": "Unless changed or removed, the default prefix will be assigned to new FOLIO HRIDs",
