Update list of valid item statuses (UIIN-936)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -425,7 +425,9 @@
   "item.status.missing": "Missing",
   "item.status.onOrder": "On order",
   "item.status.paged": "Paged",
-  "item.status.withdrawn": "Withdrawn",
+  "item.status.declaredLost": "Declared lost",
+  "item.status.received": "Received",
+  "item.status.orderClosed": "Order closed",
   "inTransitReport": "In transit items report (CSV)",
   "reports.inTransitItem.barcode": "Item barcode",
   "reports.inTransitItem.title": "Title",
