UIDATIMP-330: Correct sentence case

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -70,7 +70,7 @@
   "formatCategory": "Format category",
   "formatCode": "Format code",
   "freeText": "Free text",
-  "nameType": "Name Type",
+  "nameType": "Name type",
   "primary": "Primary",
   "makePrimary": "Make primary",
   "childInstances": "Child instances",
@@ -370,7 +370,7 @@
   "classification": "Classification",
   "classificationIdentifierType": "Classification identifier type",
   "classificationIdentifierTypes": "Classification identifier types",
-  "seriesStatement": "Series Statement",
+  "seriesStatement": "Series statement",
   "editInstanceDialog": "Edit instance dialog",
   "addNewHoldingsDialog": "Add new holdings dialog",
   "addItem": "Add item",
