UIIN-925: Add remaining call number fields in transit report

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -432,6 +432,9 @@
   "reports.inTransitItem.library": "Library",
   "reports.inTransitItem.shelvingLocation": "Shelving location",
   "reports.inTransitItem.shelvingLocationCode": "Shelving location code",
+  "reports.inTransitItem.callNumberPrefix": "Call number prefix",
+  "reports.inTransitItem.callNumberSuffix": "Call number suffix",
+  "reports.inTransitItem.copyNumbers": "Copy number",
   "reports.inTransitItem.itemStatus": "Item status",
   "reports.inTransitItem.contributors": "Contributors",
   "reports.inTransitItem.checkInServicePoint": "Check in service point",
