UIDEXP-1: Add saving instances UIIDS to csv file

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -427,6 +427,7 @@
   "item.status.paged": "Paged",
   "item.status.withdrawn": "Withdrawn",
   "inTransitReport": "In transit items report (CSV)",
+  "saveInstancesUIIDS": "Save instances UUIDs",
   "reports.inTransitItem.barcode": "Item barcode",
   "reports.inTransitItem.title": "Title",
   "reports.inTransitItem.library": "Library",
