--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -156,6 +156,7 @@
   "addIdentifier": "Add identifier",
   "isbn": "ISBN",
   "issn": "ISSN",
+  "callNumberEyeReadable": "Call number, eye readable",
   "search.all": "Keyword (title, contributor, identifier)",
   "title": "Title (all)",
   "indexTitle": "Index title",
