--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -157,6 +157,7 @@
   "isbn": "ISBN",
   "issn": "ISSN",
   "callNumberEyeReadable": "Call number, eye readable",
+  "itemEffectiveCallNumberEyeReadable": "Effective call number (item), eye readable",
   "search.all": "Keyword (title, contributor, identifier)",
   "title": "Title (all)",
   "indexTitle": "Index title",
