UIDEXP-33: Change translation title to fix typo (#947)
* UIDEXP-33: Change translation title to fix typo

* UIDEXP-33: Change translation title

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -436,8 +436,8 @@
   "item.status.orderClosed": "Order closed",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
-  "exportInstancesMARC": "Export instances (MARC)",
-  "exportInstancesJSON": "Export instances (JSON)",
+  "exportInstancesInMARC": "Export instances (MARC)",
+  "exportInstancesInJSON": "Export instances (JSON)",
   "reports.inTransitItem.barcode": "Item barcode",
   "reports.inTransitItem.title": "Title",
   "reports.inTransitItem.library": "Library",
