--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -484,5 +484,6 @@
   "precedingField.notConnected": "Not connected",
   "precedingField.connected": "Connected",
 
-  "editInstanceMarc": "Edit in QuickMARC"
+  "editInstanceMarc": "Edit in QuickMARC",
+  "quickMarcNotAvailable": "No plugin available!"
 }
