UIQM-1 Open quickMARC editor from instance record (#953)
* UIQM-1 Open quickMARC editor from instance record

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -482,5 +482,8 @@
   "adminData": "Admin data",
   "precedingField.title": "Title",
   "precedingField.notConnected": "Not connected",
-  "precedingField.connected": "Connected"
+  "precedingField.connected": "Connected",
+
+  "editInstanceMarc": "Edit in QuickMARC",
+  "quickMarcNotAvailable": "No plugin available!"
 }
