UIQM-1 fix edit quickMarc action label

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -484,6 +484,6 @@
   "precedingField.notConnected": "Not connected",
   "precedingField.connected": "Connected",
 
-  "editInstanceMarc": "Edit in QuickMARC",
+  "editInstanceMarc": "Edit in quickMARC",
   "quickMarcNotAvailable": "No plugin available!"
 }
