UIIN-817: Add ability to mark item as withdrawn

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -228,9 +228,13 @@
   "removeNotes": "Remove notes {num}",
   "remove": "Remove",
   "markAsMissing": "Mark as missing",
+  "markAsWithdrawn": "Mark as withdrawn",
   "missingModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>missing</strong>.",
   "missingModal.heading": "Confirm item as missing",
   "missingModal.confirm": "Confirm",
+  "withdrawnModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode}) will be marked as <strong>withdrawn</strong>.",
+  "withdrawnModal.heading": "Confirm item as withdrawn",
+  "withdrawnModal.confirm": "Confirm",
   "deleteHoldingsRecord": "Delete",
   "confirmHoldingsRecordDeleteModal.message": "Holdings record HRID <strong>{hrid}</strong>, location <strong>{location}</strong> has no item records associated or other dependencies and will be <strong>deleted</strong>.",
   "confirmHoldingsRecordDeleteModal.heading": "Confirm deletion of holdings record",
@@ -435,6 +439,7 @@
   "item.status.declaredLost": "Declared lost",
   "item.status.received": "Received",
   "item.status.orderClosed": "Order closed",
+  "item.status.withdrawn": "Withdrawn",
   "item.status.statusUpdatedLabel": "status updated {statusDate}",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
