UIIN-788: Add filter for instance date created

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -469,6 +469,7 @@
   "updatedSource": "Updated source",
   "createdDateAndTime": "Created date and time",
   "createdSource": "Created source",
+  "createdDate": "Date created",
   "precedingTitle": "Preceding title",
   "succeedingTitle": "Succeeding title",
   "identifierType": "Identifier type",
