UIIN-647: Add ability to search by `ISBN, normalized` option

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -157,6 +157,7 @@
   "identifiers": "Identifiers",
   "addIdentifier": "Add identifier",
   "isbn": "ISBN",
+  "isbnNormalized": "ISBN, normalized",
   "issn": "ISSN",
   "callNumberEyeReadable": "Call number, eye readable",
   "itemEffectiveCallNumberEyeReadable": "Effective call number (item), eye readable",
