--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -443,6 +443,7 @@
   "item.status.statusUpdatedLabel": "status updated {statusDate}",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
+  "saveInstancesUIIDS.error": "Error occurred while saving instances UUIDs. Please try again.",
   "saveInstancesCQLQuery": "Save instances CQL query",
   "exportInstancesInMARC": "Export instances (MARC)",
   "exportInstancesInJSON": "Export instances (JSON)",
