UIIN-790: Add filter for instance date updated

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -478,6 +478,7 @@
   "createdDateAndTime": "Created date and time",
   "createdSource": "Created source",
   "createdDate": "Date created",
+  "updatedDate": "Date updated",
   "precedingTitle": "Preceding title",
   "succeedingTitle": "Succeeding title",
   "identifierType": "Identifier type",
