UIIN-983: Search by call number normalized from holdings segment

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -160,6 +160,7 @@
   "isbnNormalized": "ISBN, normalized",
   "issn": "ISSN",
   "callNumberEyeReadable": "Call number, eye readable",
+  "callNumberNormalized": "Call number, normalized",
   "itemEffectiveCallNumberEyeReadable": "Effective call number (item), eye readable",
   "itemEffectiveCallNumberNormalized": "Effective call number (item), normalized",
   "search.all": "Keyword (title, contributor, identifier)",
