UIIN-957: Add ability to search item by claimed returned status

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -442,6 +442,7 @@
   "item.status.received": "Received",
   "item.status.orderClosed": "Order closed",
   "item.status.withdrawn": "Withdrawn",
+  "item.status.claimedReturned": "Claimed returned",
   "item.status.statusUpdatedLabel": "status updated {statusDate}",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
