--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -443,6 +443,7 @@
   "item.status.orderClosed": "Order closed",
   "item.status.withdrawn": "Withdrawn",
   "item.status.claimedReturned": "Claimed returned",
+  "item.status.lostAndPaid": "Lost and paid",
   "item.status.statusUpdatedLabel": "status updated {statusDate}",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
