UIIN-1133: Instance record. Relabel in the UI the Metadata source to Source
This seems to be very straightforward.  I just changed the label in the master
translation file.  Problem solved.

refs: https://issues.folio.org/browse/UIIN-1133

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -347,7 +347,7 @@
   "modeOfIssuance": "Mode of issuance",
   "modesOfIssuance": "Modes of issuance",
   "selectModeOfIssuance": "Select mode of issuance",
-  "metadataSource": "Metadata source",
+  "metadataSource": "Source",
   "tba": "TBA",
   "catalogedDate": "Cataloged date",
   "instanceStatusTerm": "Instance status term",
