--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -537,5 +537,12 @@
   "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
   "permission.settings.list.view": "Settings (Inventory): Display list of settings pages",
   "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
-  "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn"
+  "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn",
+
+  "moveItems.selectAll": "Select/unselect all items for movement",
+  "moveItems.selectItem": "Select/unselect item for movement",
+  "moveItems.move.items.count": "Move: {count, number} {count, plural, one {item} other {items}}",
+  "moveItems.instance.actionMenu.enable": "Move items within an instance",
+  "moveItems.instance.actionMenu.disable": "Stop items movement within an instance",
+  "moveItems.instance.success": "{count, number} {count, plural, one {item has} other {items have}} been successfully moved."
 }
