UIIN-1137 make permissions localizable
Refs UIIN-1337

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -500,5 +500,42 @@
   "precedingField.connected": "Connected",
 
   "editInstanceMarc": "Edit in quickMARC",
-  "quickMarcNotAvailable": "No plugin available!"
+  "quickMarcNotAvailable": "No plugin available!",
+
+  "permission.all-permissions.TEMPORARY": "Inventory: All permissions",
+  "permission.settings.materialtypes": "Settings (Inventory): Create, edit, delete material types",
+  "permission.settings.loantypes": "Settings (Inventory): Create, edit, delete loan types",
+  "permission.settings.statistical-code-types": "Settings (Inventory): Create, edit, delete statistical code types",
+  "permission.settings.instance-formats": "Settings (Inventory): Create, edit, delete formats",
+  "permission.settings.electronic-access-relationships": "Settings (Inventory): Create, edit, delete URL relationships",
+  "permission.settings.holdings-types": "Settings (Inventory): Create, edit, delete holdings types",
+  "permission.settings.classification-types": "Settings (Inventory): Create, edit, delete classification identifier types",
+  "permission.settings.identifier-types": "Settings (Inventory): Create, edit, delete resource identifier types",
+  "permission.settings.instance-statuses": "Settings (Inventory): Create, edit, delete instance status types",
+  "permission.settings.statistical-codes": "Settings (Inventory): Create, edit, delete statistical codes",
+  "permission.settings.alternative-title-types": "Settings (Inventory): Create, edit, delete alternative title types",
+  "permission.settings.instance-types": "Settings (Inventory): Create, edit, delete locally defined resource types",
+  "permission.settings.nature-of-content-terms": "Settings (Inventory): Create, edit, delete nature of content",
+  "permission.settings.modes-of-issuance": "Settings (Inventory): Create, edit, delete locally defined modes of issuance",
+  "permission.settings.instance-note-types": "Settings (Inventory): Create, edit, delete instance note types",
+  "permission.settings.ill-policies": "Settings (Inventory): Create, edit, delete ILL policies",
+  "permission.settings.contributor-types": "Settings (Inventory): Create, edit, delete contributor types",
+  "permission.settings.call-number-types": "Settings (Inventory): Create, edit, delete call number types",
+  "permission.settings.holdings-note-types": "Settings (Inventory): Create, edit, delete holdings note types",
+  "permission.settings.item-note-types": "Settings (Inventory): Create, edit, delete item note types",
+  "permission.settings.hrid-handling": "Settings (Inventory): Create, edit and delete HRID handling",
+  "permission.instance.view": "Inventory: View instances, holdings, and items",
+  "permission.instance.create": "Inventory: View, create instances",
+  "permission.instance.edit": "Inventory: View, create, edit instances",
+  "permission.item.create": "Inventory: View, create items",
+  "permission.item.edit": "Inventory: View, create, edit items",
+  "permission.item.markasmissing": "Inventory: View, create, edit, mark missing items",
+  "permission.item.delete": "Inventory: View, create, edit, delete items",
+  "permission.holdings.create": "Inventory: View, create holdings",
+  "permission.holdings.edit": "Inventory: View, create, edit holdings",
+  "permission.holdings.delete": "Inventory: View, create, edit, delete holdings",
+  "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
+  "permission.settings.list.view": "Settings (Inventory): Display list of settings pages",
+  "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
+  "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn"
 }
