UIIN-1098 Select and move holdings with items or items to another instance

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -34,6 +34,7 @@
   "cancel": "Cancel",
   "newInstance": "New instance",
   "editInstance": "Edit",
+  "moveItems": "Move holdings/items to another instance",
   "instanceDetails": "Instance details",
   "addHoldings": "Add holdings",
   "itemDotStatus": "Item record {barcode} {status}",
