UIIN-1104 Add Item screen : Incorrect aria label

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -385,7 +385,7 @@
   "classificationIdentifierTypes": "Classification identifier types",
   "seriesStatement": "Series statement",
   "editInstanceDialog": "Edit instance dialog",
-  "addNewHoldingsDialog": "Add new holdings dialog",
+  "addNewHoldingsDialog": "Add new",
   "addItem": "Add item",
   "editItem": "Edit",
   "viewItem": "View item",
