Add effective location to item list table (UIIN-1124)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -106,6 +106,7 @@
   "permanentLocation": "Permanent",
   "temporaryLocation": "Temporary",
   "effectiveLocation": "Effective location for item",
+  "effectiveLocationShort": "Effective location",
   "effectiveCallNumber": "Effective call number string",
   "permanent": "Permanent",
   "temporary": "Temporary",
