--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -301,17 +301,23 @@
   "selectHoldingsType": "Select holdings type",
   "holdingsStatement": "Holdings statement",
   "holdingsStatementNote": "Holdings statement note",
+  "holdingsStatementPublicNote": "Holdings statement public note",
+  "holdingsStatementStaffNote": "Holdings statement staff note",
   "holdingsStatements": "Holdings statements",
   "addHoldingsStatement": "Add holdings statement",
   "holdingsStatementForIndexes": "Holdings statement for indexes",
   "holdingsStatementsForIndexes": "Holdings statements for indexes",
   "addHoldingsStatementForIndexes": "Add holdings statement for indexes",
   "holdingsStatementForIndexesNote": "Holdings statement for indexes note",
+  "holdingsStatementForIndexesPublicNote": "Holdings statement for indexes public note",
+  "holdingsStatementForIndexesStaffNote": "Holdings statement for indexes staff note",
   "holdingsStatementsForIndexesNote": "Holdings statements for indexes notes",
   "holdingsStatementForSupplements": "Holdings statement for supplements",
   "holdingsStatementsForSupplements": "Holdings statements for supplements",
   "addHoldingsStatementForSupplements": "Add holdings statement for supplements",
   "holdingsStatementForSupplementsNote": "Holdings statement for supplements note",
+  "holdingsStatementForSupplementsPublicNote": "Holdings statement for supplements public note",
+  "holdingsStatementForSupplementsStaffNote": "Holdings statement for supplements staff note",
   "holdingsStatementsForSupplementsNote": "Holdings statements for supplements notes",
   "publicDisplay": "Public display",
   "addReceivingHistory": "Add receiving history",
