UIIN-1120 Moving holdings and items permissions

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -540,10 +540,12 @@
   "permission.instance.edit": "Inventory: View, create, edit instances",
   "permission.item.create": "Inventory: View, create items",
   "permission.item.edit": "Inventory: View, create, edit items",
+  "permission.item.move": "Inventory: Move items",
   "permission.item.markasmissing": "Inventory: View, create, edit, mark missing items",
   "permission.item.delete": "Inventory: View, create, edit, delete items",
   "permission.holdings.create": "Inventory: View, create holdings",
   "permission.holdings.edit": "Inventory: View, create, edit holdings",
+  "permission.holdings.move": "Inventory: Move holdings",
   "permission.holdings.delete": "Inventory: View, create, edit, delete holdings",
   "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
   "permission.settings.list.view": "Settings (Inventory): Display list of settings pages",
