UIIN-1006 list "Aged to lost" in filters
There is more than one place where item-statuses are listed because not
all statuses are available under all circumstances. I missed adding it
to the item-status-filter in #1122.

Refs UIIN-1006

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -440,6 +440,7 @@
   "marc": "MARC",
   "unknownNoteType": "Unknown note type",
   "item.status": "Item status",
+  "item.status.agedToLost": "Aged to lost",
   "item.status.available": "Available",
   "item.status.awaitingPickup": "Awaiting pickup",
   "item.status.awaitingDelivery": "Awaiting delivery",
