--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -552,6 +552,7 @@
   "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
   "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn",
 
+  "moveItems.moveButton": "Move to",
   "moveItems.selectAll": "Select/unselect all items for movement",
   "moveItems.selectItem": "Select/unselect item for movement",
   "moveItems.move.items.count": "Move: {count, number} {count, plural, one {item} other {items}}",
