--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -31,6 +31,7 @@
   "itemRecord": "Item record",
   "code": "code",
   "duplicateInstance": "Duplicate",
+  "save": "Save",
   "cancel": "Cancel",
   "newInstance": "New instance",
   "editInstance": "Edit",
@@ -49,6 +50,7 @@
   "ILLPolicy": "ILL policy",
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
+  "defaultDiscoverySuppress": "Suppress from discovery by default",
   "previouslyHeld": "Previously held",
   "alternativeTitle": "Alternative title",
   "alternativeTitles": "Alternative titles",
@@ -352,6 +354,7 @@
   "addStatisticalCode": "Add statistical code",
   "instanceStatus": "Instance status term",
   "selectInstanceStatus": "Select instance status",
+  "defaultInstanceStatus": "Default instance status",
   "modeOfIssuance": "Mode of issuance",
   "modesOfIssuance": "Modes of issuance",
   "selectModeOfIssuance": "Select mode of issuance",
@@ -410,6 +413,7 @@
   "copyItemDialog": "Copy item dialog",
   "copyItem": "Duplicate",
   "newRequest": "New Request",
+  "fastAdd": "Fast add",
   "newFastAddRecord": "New Fast Add Record",
   "confirmLocation.selectBtn": "Select",
   "confirmLocation.message": "This location has a status of inactive. Are you sure you want to select this location?",
@@ -549,7 +553,6 @@
   "permission.holdings.delete": "Inventory: View, create, edit, delete holdings",
   "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
   "permission.settings.list.view": "Settings (Inventory): Display list of settings pages",
-  "permission.instance.view-staff-suppressed-records": "Inventory: View instance records being suppressed for staff",
   "permission.items.mark-items-withdrawn": "Inventory: Mark items withdrawn",
 
   "moveItems.moveButton": "Move to",
