--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -48,6 +48,8 @@
   "holdingsTypes": "Holdings types",
   "holdingsNoteTypes": "Holdings note types",
   "holdingsNoteType": "Holdings note type",
+  "holdingsSources": "Holdings sources",
+  "holdingsSource": "Holdings source",
   "ILLPolicy": "ILL policy",
   "staffSuppress": "Staff suppress",
   "discoverySuppress": "Suppress from discovery",
