--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -18,6 +18,7 @@
   "item.availability.loanDate": "Loan date",
   "item.availability.dueDate": "Due date",
   "uniqueCode": "Code must be unique",
+  "uniqueName": "Name must be unique",
   "fillIn": "Please fill this in to continue",
   "selectToContinue": "Please select to continue",
   "add": "Add",
