fix code review comment 2

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -38,7 +38,7 @@
   "newInstance": "New instance",
   "editInstance": "Edit",
   "moveItems": "Move holdings/items to another instance",
-  "viewRequests": "View requests",
+  "viewRequests": "View requests ({count})",
   "instanceDetails": "Instance details",
   "addHoldings": "Add holdings",
   "itemDotStatus": "Item record {barcode} {status}",
@@ -201,6 +201,7 @@
   "instanceRecord": "Instance record",
   "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
   "instanceRecordRequestsTitle": "Requests on items - {instanceResourceTitle}, {instancePublicationDate}",
+  "instanceRecordRequestsSubtitle": "{count} items found",
   "contentData": "Content data",
   "descriptiveData": "Descriptive data",
   "selectMaterialType": "Select material type",
