--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -38,6 +38,7 @@
   "newInstance": "New instance",
   "editInstance": "Edit",
   "moveItems": "Move holdings/items to another instance",
+  "viewRequests": "View requests ({count})",
   "instanceDetails": "Instance details",
   "addHoldings": "Add holdings",
   "itemDotStatus": "Item record {barcode} {status}",
@@ -199,6 +200,8 @@
   "titleData": "Title data",
   "instanceRecord": "Instance record",
   "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
+  "instanceRecordRequestsTitle": "Requests on items - {instanceResourceTitle}, {instancePublicationDate}",
+  "instanceRecordRequestsSubtitle": "{count} items found",
   "contentData": "Content data",
   "descriptiveData": "Descriptive data",
   "selectMaterialType": "Select material type",
@@ -208,6 +211,7 @@
   "barcode": "Barcode",
   "itemBarcode": "Item barcode",
   "item.barcode": "Item: barcode",
+  "item.requestQueue": "Request queue",
   "noBarcode": "No barcode",
   "itemHrid": "Item HRID",
   "itemIdentifier": "Item identifier",
