--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -361,6 +361,7 @@
   "instanceData": "Administrative data",
   "instanceId": "Instance UUID",
   "instanceHrid": "Instance HRID",
+  "instanceMatchKey": "Instance match key",
   "addStatisticalCode": "Add statistical code",
   "instanceStatus": "Instance status term",
   "selectInstanceStatus": "Select instance status",
