--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -253,7 +253,7 @@
   "withdrawnModal.heading": "Confirm item status: Withdrawn",
   "withdrawnModal.confirm": "Confirm",
   "confirmModal.message": "<strong>{title} ({materialType})</strong> (Barcode: {barcode})'s item status will be marked as <strong>{status}</strong>.",
-  "confirmModal.requestMessage": " {countIndex, plural, =-1 {There may be open requests for this item.} =0 {} one {There is {openRequestValue} open request for this item.} other {There are {openRequestValue} open requests for this item.}}",
+  "confirmModal.requestMessage": " {countIndex, plural, =-1 {There may be open requests for this item.} =0 {} one {There is {openRequestValue} for this item.} other {There are {openRequestValue} for this item.}}",
   "deleteHoldingsRecord": "Delete",
   "confirmHoldingsRecordDeleteModal.message": "Holdings record HRID <strong>{hrid}</strong>, location <strong>{location}</strong> has no item records associated or other dependencies and will be <strong>deleted</strong>.",
   "confirmHoldingsRecordDeleteModal.heading": "Confirm deletion of holdings record",
