--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -477,6 +477,7 @@
   "item.status.statusUpdatedLabel": "status updated {statusDate}",
   "inTransitReport": "In transit items report (CSV)",
   "saveInstancesUIIDS": "Save instances UUIDs",
+  "saveInstancesUIIDS.info": "Request to save instances UUIDs has been received. File download may take a few minutes.",
   "saveInstancesUIIDS.error": "Error occurred while saving instances UUIDs. Please try again.",
   "saveInstancesCQLQuery": "Save instances CQL query",
   "exportInstancesInMARC": "Export instances (MARC)",
