UIIN-1349: Add select row checkboxes to inventory instance search result

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -5,6 +5,7 @@
   "instances.columns.contributors": "Contributors",
   "instances.columns.publishers": "Publishers",
   "instances.columns.relation": "Relation",
+  "instances.rows.select": "Select instance",
   "instances.resourceType": "Resource Type",
   "instances.language": "Language",
   "holdingsRecord.awaitingResources": "Awaiting resources",
