--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -589,5 +589,7 @@
   "moveItems.modal.confirmLabel": "Continue",
   "moveItems.modal.title": "Confirm move",
   "moveItems.modal.message.holdings": "{count, number} {count, plural, one {holding} other {holdings}} will be moved to {targetName}",
-  "moveItems.modal.message.items": "{count, number} {count, plural, one {item} other {items}} will be moved to {targetName}"
+  "moveItems.modal.message.items": "{count, number} {count, plural, one {item} other {items}} will be moved to {targetName}",
+
+  "showTags": "Show tags"
 }
