--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -591,5 +591,6 @@
   "moveItems.modal.message.holdings": "{count, number} {count, plural, one {holding} other {holdings}} will be moved to {targetName}",
   "moveItems.modal.message.items": "{count, number} {count, plural, one {item} other {items}} will be moved to {targetName}",
 
+  "filter.tags": "Tags",
   "showTags": "Show tags"
 }
