--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -6,6 +6,7 @@
   "instances.columns.publishers": "Publishers",
   "instances.columns.relation": "Relation",
   "instances.rows.select": "Select instance",
+  "instances.rows.recordsSelected": "{count, number} {count, plural, one {record} other {records}} selected",
   "instances.resourceType": "Resource Type",
   "instances.language": "Language",
   "holdingsRecord.awaitingResources": "Awaiting resources",
