Clean up display of instance and item detail record headers (UIIN-1361)

--- a/translations/ui-inventory/en.json
+++ b/translations/ui-inventory/en.json
@@ -33,6 +33,7 @@
   "createInstance": "Create instance",
   "updateInstance": "Update instance",
   "itemRecord": "Item record",
+  "itemRecordWithDescription": "Item record ({materialType}, {status})",
   "code": "code",
   "duplicateInstance": "Duplicate",
   "save": "Save",
@@ -202,6 +203,7 @@
   "selectInstanceFormat": "Select format",
   "titleData": "Title data",
   "instanceRecord": "Instance record",
+  "instanceRecordWithType": "Instance record ({instanceTypeName})",
   "instanceRecordTitle": "Instance record {title} {publisherAndDate}",
   "instanceRecordRequestsTitle": "Requests on items - {instanceResourceTitle}, {instancePublicationDate}",
   "instanceRecordRequestsSubtitle": "{count} items found",
