--- a/translations/ui-inventory/en_US.json
+++ b/translations/ui-inventory/en_US.json
@@ -13,6 +13,7 @@
     "createInstance": "Create instance",
     "updateInstance": "Update instance",
     "itemRecord": "Item record",
+    "itemRecordWithDescription": "Item record ({materialType}, {status})",
     "editInstance": "Edit",
     "instanceDetails": "Instance details",
     "addHoldings": "Add holdings",
@@ -42,6 +43,7 @@
     "edition": "Edition",
     "titleData": "Title data",
     "instanceRecord": "Instance record",
+    "instanceRecordWithType": "Instance record ({instanceTypeName})",
     "contentData": "Content data",
     "descriptiveData": "Descriptive data",
     "selectMaterialType": "Select material type",
